--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "0.9.0",
+    "bcrypt": "5.1.1",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.5.7",
